# astrbot_plugin_cost_control

./: .gitignore  CHANGELOG.md  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
.claude/: launch.json
cost_control/: __init__.py  ai_diag.py  analytics.py  attributor.py  budget.py  cache_diag.py  commands.py  config.py  cost.py  default_pricing.py  exchange_rates.py  notifier.py  prompt_optimizer.py  schedule.py  store.py  supplement.py  usage_query.py  web_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AiDiag.tsx  AlertsBar.tsx  Button.tsx  CacheEventRow.tsx  DeltaBadge.tsx  FallbackProvidersPanel.tsx  Feedback.tsx  GlobalDefaultsPanel.tsx  OverrideRow.tsx  OverridesPanel.tsx  Panel.tsx  PresetSuggest.tsx  ProgressBar.tsx  ProviderPricingCard.tsx  SaveToast.tsx  Segmented.tsx  StackedBar.tsx  StatCard.tsx  StatCardGrid.tsx  StrategyCard.tsx
frontend/src/hooks/: useApi.ts  useAutoSave.ts  useBridge.ts  useChartColors.ts  usePolling.ts  useTheme.ts
frontend/src/lib/: api.ts  bridge.ts  cacheMeta.ts  format.ts  types.ts
frontend/src/styles/: base.css  components.css  tokens.css
frontend/src/views/: AttributionView.tsx  (+6 more)
page/: app.js  index.html  style.css
pages/dashboard/: app.js  index.html  style.css
scripts/: sync_pricing.py
tests/: test_analytics.py  test_attributor.py  test_budget.py  test_cache_diag.py  test_config.py  test_cost.py  test_notifier.py  test_prompt_optimizer.py  test_supplement.py  test_usage_query.py
(+5 files in other folders)
