[project]
name = "astrbot-plugin-cost-control"
version = "0.1.0"
description = "细粒度 token 监控、超预算提醒、缓存破坏诊断、提示词优化与全数据可视化的 AstrBot 插件"
requires-python = ">=3.12"
dependencies = [
    "astrbot>=4.25.5",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cost_control"]
